fixed overflow contact page

--- a/src/Contact/Contact.css
+++ b/src/Contact/Contact.css
@@ -1,11 +1,12 @@
 .contact-container {
   background-repeat: no-repeat;
   background-size: cover;
-  padding-top: 15dvh;
+  /* margin-top: 10dvh; */
   padding-left: 2em;
   display: flex;
   align-items: center;
-  height: 80vh;
+  height: 100dvh;
+  overflow-y: hidden;
 }
 .contact-cards {
   display: flex;
@@ -14,10 +15,11 @@
   justify-content: center;
   align-items: center;
   width: 100vw;
-  padding-bottom: 1%;
-  padding-top: 1%;
-  gap: 2vw;
-  overflow-y: hidden;
+  margin-top: 10dvh;
+  /* padding-bottom: 1%;
+  padding-top: 1%; */
+  gap: 1vw;
+  /* overflow-y: hidden; */
 }
 
 #contact-cards:hover > .contact-card::after {
