--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -1,7 +1,8 @@
 .navbar {
   display: flex;
-  padding: 2rem;
-  height: 5dvh;
+  /* padding: 2rem; */
+  justify-content: space-around;
+  height: 10dvh;
 }
 .navbar ul {
   display: flex;
